# esp32_valves_regulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  esp32_workspace.code-workspace  esp_controller.code-workspace  partitions.csv  sdkconfig  sdkconfig.old  uncrustify.cfg
components/backend/: CMakeLists.txt  cmd_client.c  cmd_client.h  cmd_client_req.c  cmd_server.c  cmd_server.h  parse_cmd.c  parse_cmd.h  telnet.c  telnet.h  wifidrv.c  wifidrv.h
components/config/: app_config.h  config.c  config.h
components/drv/: CMakeLists.txt  battery.c  battery.h  but.c  but.h  buzzer.c  buzzer.h  error_valve.c  error_valve.h  fast_add.c  fast_add.h  keepalive.c  led.c  led.h  measure.c  measure.h  parameters.c  parameters.h  pcf8574.c  power_on.c  power_on.h  pwm_drv.c  pwm_drv.h  ringBuff.c  server_conroller.c  server_controller.h  sleep.c  sleep_e.h  ultrasonar.c  ultrasonar.h  water_flow_sensor.c  water_flow_sensor.h
components/menu/: CMakeLists.txt  dictionary.c  dictionary.h  figure  menu.h  menu_backend.c  menu_backend.h  menu_bootup.c  menu_bootup.h  menu_default.c  menu_default.h  menu_drv.c  menu_drv.h  menu_low_battery.c  menu_low_battery.h  menu_main.c  menu_param.c  menu_param.h  menu_settings.c  menu_settings.h  menu_state.c  menu_state.h  oled.c  oled.h  oled_glcd.h  ssdFigure.c  ssdFigure.h  start_menu.c  start_menu.h  wifi_menu.c  wifi_menu.h
components/mongoose_drv/: CMakeLists.txt  prod_http_app.c  wifi.c
main/: main.c  parameters.c  parameters.h  project_parameters.h
provisioning/: provisioning.py
test/: CMakeLists.txt  Makefile
(+4 files in other folders)
